# phkvstorage

./: BigFileStorage.cpp  BigFileStorage.hpp  CMakeLists.txt  FileMagic.hpp  FileOpsHelpers.hpp  FileSystem.cpp  FileSystem.hpp  FileVersion.hpp  IRandomAccessFile.hpp  InputBinBuffer.hpp  KeyPathUtil.hpp  LICENSE  LRUPriorityCachePool.hpp  OutputBinBuffer.hpp  PHKVStorage.cpp  PHKVStorage.hpp  README-RU.md  README.md  SmallToMediumFileStorage.cpp  SmallToMediumFileStorage.hpp  StorageVolume.cpp  StorageVolume.hpp  StringViewFormatter.hpp  UIntArrayHexFormatter.hpp
benchmark/: CMakeLists.txt  phkvs_benchmark.cpp
platform/posix/: RandomAccessFilePosix.hpp
platform/win32/: RandomAccessFileWin32.hpp
tests/: CMakeLists.txt  FilesCleanupFixture.hpp  bigfilestorage.cpp  file.cpp  stmfilestorage.cpp  test_bigfilestorage.cpp  test_buffers.cpp  test_file.cpp  test_phkvstorage.cpp  test_simple.cpp  test_stmfilestorage.cpp  test_volume.cpp
webtest/: CMakeLists.txt  detect_ssl.hpp  json_rpc_service.cpp  json_rpc_service.hpp  phkvs_webtest.cpp  server_certificate.hpp  ssl_stream.hpp  web_server.cpp  web_server.hpp
webtest/webui/: package.json  tsconfig.json  webpack.config.js  webpack.release.config.js
webtest/webui/release/: bundle.min.js  index.html
webtest/webui/src/: index.tsx
webtest/webui/src/components/: app.tsx  data-tab.tsx  lookup-tab.tsx  store-tab.tsx  table-fix.css  volumes-tab.tsx
webtest/webui/src/utils/: jsonrpc.ts
